--- a/src/stc/stc.h.in
+++ b/src/stc/stc.h.in
@@ -72,6 +72,7 @@ class WXDLLIMPEXP_FWD_CORE wxScrollBar;
     #define wxSTC_DEPRECATED_MACRO_VALUE(value,msg) value
 #endif
 
+#if WXWIN_COMPATIBILITY_3_0
 
 // The wxSTC_INDIC{0,1,2,S}_MASK values are no longer used in Scintilla
 
@@ -121,6 +122,7 @@ class WXDLLIMPEXP_FWD_CORE wxScrollBar;
 #define wxSTC_SCVS_NOWRAPLINESTART wxSTC_DEPRECATED_MACRO_VALUE(4, \
     "wxSTC_SCVS_NOWRAPLINESTART is deprecated. Use wxSTC_VS_NOWRAPLINESTART instead.")
 
+#endif // WXWIN_COMPATIBILITY_3_0
 
 //----------------------------------------------------------------------
 // Commands that can be bound to keystrokes section {{{
@@ -520,13 +522,13 @@ public:
 
     // methods deprecated due to changes in the scintilla library
     // ---------------------------------------------
-
+#if WXWIN_COMPATIBILITY_3_0
     wxDEPRECATED_MSG("use UsePopUp(int) instead.")
     void UsePopUp(bool allowPopUp);
 
     wxDEPRECATED_MSG("use StartStyling(int start) instead.")
     void StartStyling(int start, int unused);
-
+#endif // WXWIN_COMPATIBILITY_3_0
 
     static wxVersionInfo GetLibraryVersionInfo();
 
@@ -719,8 +721,10 @@ wxDECLARE_EXPORTED_EVENT( WXDLLIMPEXP_STC, wxEVT_STC_CHARADDED, wxStyledTextEven
 wxDECLARE_EXPORTED_EVENT( WXDLLIMPEXP_STC, wxEVT_STC_SAVEPOINTREACHED, wxStyledTextEvent );
 wxDECLARE_EXPORTED_EVENT( WXDLLIMPEXP_STC, wxEVT_STC_SAVEPOINTLEFT, wxStyledTextEvent );
 wxDECLARE_EXPORTED_EVENT( WXDLLIMPEXP_STC, wxEVT_STC_ROMODIFYATTEMPT, wxStyledTextEvent );
+#if WXWIN_COMPATIBILITY_3_0
 wxDEPRECATED_MSG( "Don't handle wxEVT_STC_KEY. It's never generated." ) \
     wxDECLARE_EXPORTED_EVENT( WXDLLIMPEXP_STC, wxEVT_STC_KEY, wxStyledTextEvent );
+#endif // WXWIN_COMPATIBILITY_3_0
 wxDECLARE_EXPORTED_EVENT( WXDLLIMPEXP_STC, wxEVT_STC_DOUBLECLICK, wxStyledTextEvent );
 wxDECLARE_EXPORTED_EVENT( WXDLLIMPEXP_STC, wxEVT_STC_UPDATEUI, wxStyledTextEvent );
 wxDECLARE_EXPORTED_EVENT( WXDLLIMPEXP_STC, wxEVT_STC_MODIFIED, wxStyledTextEvent );
@@ -729,8 +733,10 @@ wxDECLARE_EXPORTED_EVENT( WXDLLIMPEXP_STC, wxEVT_STC_MARGINCLICK, wxStyledTextEv
 wxDECLARE_EXPORTED_EVENT( WXDLLIMPEXP_STC, wxEVT_STC_NEEDSHOWN, wxStyledTextEvent );
 wxDECLARE_EXPORTED_EVENT( WXDLLIMPEXP_STC, wxEVT_STC_PAINTED, wxStyledTextEvent );
 wxDECLARE_EXPORTED_EVENT( WXDLLIMPEXP_STC, wxEVT_STC_USERLISTSELECTION, wxStyledTextEvent );
+#if WXWIN_COMPATIBILITY_3_0
 wxDEPRECATED_MSG( "Don't handle wxEVT_STC_URIDROPPED. It's never generated." ) \
     wxDECLARE_EXPORTED_EVENT( WXDLLIMPEXP_STC, wxEVT_STC_URIDROPPED, wxStyledTextEvent );
+#endif // WXWIN_COMPATIBILITY_3_0
 wxDECLARE_EXPORTED_EVENT( WXDLLIMPEXP_STC, wxEVT_STC_DWELLSTART, wxStyledTextEvent );
 wxDECLARE_EXPORTED_EVENT( WXDLLIMPEXP_STC, wxEVT_STC_DWELLEND, wxStyledTextEvent );
 wxDECLARE_EXPORTED_EVENT( WXDLLIMPEXP_STC, wxEVT_STC_START_DRAG, wxStyledTextEvent );
@@ -759,7 +765,9 @@ wxDECLARE_EXPORTED_EVENT( WXDLLIMPEXP_STC, wxEVT_STC_MARGIN_RIGHT_CLICK, wxStyle
         wxEVT_STC_SAVEPOINTREACHED,
         wxEVT_STC_SAVEPOINTLEFT,
         wxEVT_STC_ROMODIFYATTEMPT,
+#if WXWIN_COMPATIBILITY_3_0
         wxEVT_STC_KEY, // deprecated
+#endif // WXWIN_COMPATIBILITY_3_0
         wxEVT_STC_DOUBLECLICK,
         wxEVT_STC_UPDATEUI,
         wxEVT_STC_MODIFIED,
@@ -768,7 +776,9 @@ wxDECLARE_EXPORTED_EVENT( WXDLLIMPEXP_STC, wxEVT_STC_MARGIN_RIGHT_CLICK, wxStyle
         wxEVT_STC_NEEDSHOWN,
         wxEVT_STC_PAINTED,
         wxEVT_STC_USERLISTSELECTION,
+#if WXWIN_COMPATIBILITY_3_0
         wxEVT_STC_URIDROPPED, // deprecated
+#endif // WXWIN_COMPATIBILITY_3_0
         wxEVT_STC_DWELLSTART,
         wxEVT_STC_DWELLEND,
         wxEVT_STC_START_DRAG,
