--- a/setup.h.in
+++ b/setup.h.in
@@ -834,6 +834,10 @@
 #define wxUSE_PLUGINS 0
 
 /*
+ * Use FontConfig library for private fonts support in wxFont.
+ */
+#define wxUSE_FONTCONFIG 0
+/*
  * Use GTK print for printing under GTK+ 2.10+
  */
 #define wxUSE_GTKPRINT 0
