Checkout submodules in Appveyor builds
Unlike Travis CI, Appveyor doesn't do this automatically, but we will
need them soon (the currently existing Catch submodule is not used by
Appveyor builds but, arguably, should be too).

--- a/appveyor.yml
+++ b/appveyor.yml
@@ -29,6 +29,8 @@ environment:
 
 clone_depth: 50
 
+install: git submodule update --init
+
 before_build:
 - ps: |
     $env:PATH = $env:PATH -replace "C:\\Program Files \(x86\)\\Git\\bin",""
