Replace jpeg subdirectory with a Git submodule
Use libjpeg-turbo repository as upstream, even if we don't use
libjpeg-turno library itself (yet?) because it also has all the historic
libjpeg versions in its repository, including 6b (dating from 1998!)
that our sources were based on.

--- a/.gitmodules
+++ b/.gitmodules
@@ -17,3 +17,7 @@
 	path = src/tiff
 	url = https://github.com/wxWidgets/libtiff.git
 	branch = wx
+[submodule "src/jpeg"]
+	path = src/jpeg
+	url = https://github.com/wxWidgets/libjpeg-turbo.git
+	branch = wx
